# Alumosaic

./: .gitignore  OpenCVTest.ipynb  README.md  pyproject.toml  secrets.txt
README/: README.md
django_alumosaic/: manage.py
django_alumosaic/alumosaic/: apps.py  urls.py  views.py
django_alumosaic/alumosaic/templates/alumosaic/: about.html  base.html  home.html
django_alumosaic/django_alumosaic/: asgi.py  settings.py  urls.py  wsgi.py
