[tool.poetry]
name = "alumosaic"
version = "0.1.0"
description = "Create mosaics using python"
authors = ["Saul Alarcon <alarcon.saul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
